ver 0.318 slovne ispravke

--- a/putninalozi/templates/company.html
+++ b/putninalozi/templates/company.html
@@ -206,7 +206,7 @@
 
         </fieldset>
         <div class="form-group">
-          <a class="btn btn-info" href="{{url_for('companys.company_list')}}">back</a>
+          <a class="btn btn-info" href="{{url_for('companys.company_list')}}">Nazad</a>
           {{ form.submit(class="btn btn-outline-info") }}
         </div>
       </form>
