--- a/putninalozi/templates/expenses.html
+++ b/putninalozi/templates/expenses.html
@@ -81,10 +81,10 @@
       </div>
     </fieldset>
     <div class="form-group">
-      <a class="btn btn-info" href="{{url_for('travel_warrants.travel_warrant_profile', warrant_id=warrant.travel_warrant_id)}}">back</a>
+      <a class="btn btn-info" href="{{url_for('travel_warrants.travel_warrant_profile', warrant_id=warrant.travel_warrant_id)}}">Nazad</a>
       {{ form.submit(class="btn btn-outline-info") }}
       {% if legend != 'Dodavanje troškova:' %}
-      <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#DeleteModal">Delete</button>
+      <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#DeleteModal">Obrišite trošak</button>
       <div class="modal fade" id="DeleteModal" tabindex="-1" role="dialog" aria-labelledby="DeleteModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
