--- a/putninalozi/templates/read_travel_warrant_user.html
+++ b/putninalozi/templates/read_travel_warrant_user.html
@@ -19,7 +19,7 @@
               <h3>Na službenom putu koristi prevozno sredstvo registarske tablice: {{ warrant.travelwarrant_vehicle.vehicle_registration }} {{ warrant.personal_registration }}</h3>
               <br>
               <h3>Dnevnica za ovo služebno putovanje pripada u iznosu od: {{ warrant.daily_wage }} {{ warrant.daily_wage_currency }}</h3>
-              <h3>Na službenom putu će se zadržati najdalje do {{ warrant.end_datetime.strftime('%d.%m.%Y') }}, a u roku od 48h po povratku sa službenog puta i dolask na posao, podnešće pismeni izveštaj o obavljenom službenom poslu. Račun o učinjenim putnim troškovima podneti u roku od tri dana</h3>
+              <h3>Na službenom putu će se zadržati najdalje do {{ warrant.end_datetime.strftime('%d.%m.%Y') }}, a u roku od 48h po povratku sa službenog puta i dolask na posao, podneće pismeni izveštaj o obavljenom službenom poslu. Račun o učinjenim putnim troškovima podneti u roku od tri dana</h3>
               <br>
               <h3>Putni troškovi padaju na teret: {{ warrant.costs_pays }}</h3>
               <br>
