--- a/putninalozi/templates/register_v.html
+++ b/putninalozi/templates/register_v.html
@@ -64,7 +64,7 @@
             {% endif %}
         </fieldset>
         <div class="form-group">
-          <a class="btn btn-info" href="{{url_for('vehicles.vehicle_list')}}">back</a>
+          <a class="btn btn-info" href="{{url_for('vehicles.vehicle_list')}}">Nazad</a>
       {{ form.submit(class="btn btn-outline-info") }}
     </div>
   </form>
