--- a/putninalozi/templates/user_list.html
+++ b/putninalozi/templates/user_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 {% if current_user.authorization != 'c_user' %}
-  <a class="btn btn-info btn-sm m-1" href="{{ url_for('users.register_u') }}">Registruj novog korisnika</a>
+  <a class="btn btn-info btn-sm m-1" href="{{ url_for('users.register_u') }}">Registrujte novog korisnika</a>
 {% endif %}
 <hr>
 
@@ -19,7 +19,7 @@
     <tbody>
       {% for user in users %}
         <tr>
-          <td> <a class="mr-2 btn btn-info" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Uređivanje Korisnika">{{ user.name }} {{ user.surname }}</a> </td>
+          <td> <a class="mr-2 btn btn-info" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Uređivanje korisnika">{{ user.name }} {{ user.surname }}</a> </td>
           <td>{{ user.user_company.companyname }}</td>
           <td>{{ user.authorization }}</td>
           <td>{{ user.email }}</td>
@@ -37,7 +37,7 @@
       {% for user in users %}
         {% if user.user_company.id == current_user.user_company.id %}
           <tr>
-            <td> <a class="mr-2 btn btn-info" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Uređivanje Korisnika">{{ user.name }} {{ user.surname }}</a> </td>
+            <td> <a class="mr-2 btn btn-info" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Uređivanje korisnika">{{ user.name }} {{ user.surname }}</a> </td>
             <td>{{ user.email }}</td>
           </tr>
         {% endif %}
@@ -54,7 +54,7 @@
       {% for user in users %}
         {% if user.id == current_user.id %}
           <tr>
-            <td> <a class="mr-2 btn btn-info" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Uređivanje Korisnika">{{ user.name }} {{ user.surname }}</a> </td>
+            <td> <a class="mr-2 btn btn-info" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Uređivanje korisnika">{{ user.name }} {{ user.surname }}</a> </td>
             <td>{{ user.email }}</td>
           </tr>
         {% endif %}
