--- a/putninalozi/templates/user.html
+++ b/putninalozi/templates/user.html
@@ -131,10 +131,10 @@
 
         </fieldset>
         <div class="form-group">
-          <a class="btn btn-info" href="{{url_for('users.user_list')}}">back</a>
+          <a class="btn btn-info" href="{{url_for('users.user_list')}}">Nazad</a>
           {{ form.submit(class="btn btn-outline-info") }}
           {% if current_user.authorization == 's_admin' or current_user.authorization == 'c_admin' %}
-            <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#DeleteModal">Delete</button>
+            <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#DeleteModal">Obrišite profil korisnika</button>
           {% endif %}
         </div>
   </form>
