--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 {% if current_user.authorization != 'c_user' %}
-<a class="btn btn-info btn-sm m-1" href="{{ url_for('vehicles.register_v') }}">Registruj novo vozilo</a>
+<a class="btn btn-info btn-sm m-1" href="{{ url_for('vehicles.register_v') }}">Registrujte novo vozilo</a>
 {% endif %}
 <hr>
 <table id="data" border="1" class="table table-striped">
